--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -7,7 +7,7 @@
 	
 	<!-- axu4j config begin -->
 	<context-param>
-		<param-name>__AXU4J_LAYOUT_PRFIX__</param-name>
+		<param-name>__AXU4J_LAYOUT_PREFIX__</param-name>
 		<param-value>/WEB-INF/layouts/</param-value>
 	</context-param>
 	<context-param>
