--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -5,7 +5,7 @@
 <web-app>
 	<display-name>Archetype Created Web Application</display-name>
 	
-	<!-- axu4j config begin -->
+	<!-- axu4j config begin
 	<context-param>
 		<param-name>__AXU4J_LAYOUT_PREFIX__</param-name>
 		<param-value>/WEB-INF/layouts/</param-value>
@@ -14,5 +14,5 @@
 		<param-name>__AXU4J_LAYOUT_SUFFIX__</param-name>
 		<param-value>.jsp</param-value>
 	</context-param>
-	<!-- axu4j config end -->
+	axu4j config end -->
 </web-app>
