--- a/axu4j-tag/pom.xml
+++ b/axu4j-tag/pom.xml
@@ -23,8 +23,9 @@
 	</licenses>
 
 	<scm>
-		<url>http://github.com/axisj-com/axu4j</url>
 		<connection>scm:git:git://github.com/axisj-com/axu4j.git</connection>
+		<developerConnection>scm:git:git://github.com/axisj-com/axu4j.git</developerConnection>
+		<url>http://github.com/axisj-com/axu4j</url>
 	</scm>
 
 	<properties>
