--- a/axu4j-tag/pom.xml
+++ b/axu4j-tag/pom.xml
@@ -24,9 +24,9 @@
 	</licenses>
 
 	<scm>
-		<connection>scm:git:git@github.com:axisj-com/axu4j.git</connection>
-		<developerConnection>scm:git:git@github.com:axisj-com/axu4j.git</developerConnection>
-		<url>git@github.com:axisj-com/axu4j.git</url>
+		<connection>scm:git:https://github.com/axisj-com/axu4j.git</connection>
+		<developerConnection>scm:git:https://github.com/axisj-com/axu4j.git</developerConnection>
+		<url>https://github.com/axisj-com/axu4j</url>
 	</scm>
 
 	<properties>
@@ -207,24 +207,16 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-release-plugin</artifactId>
-				<version>2.2.2</version>
+				<version>2.5</version>
 				<configuration>
-					<arguments>-Dgpg.passphrase=${gpg.passphrase}</arguments>
+					<autoVersionSubmodules>true</autoVersionSubmodules>
+					<useReleaseProfile>false</useReleaseProfile>
+					<releaseProfiles>release</releaseProfiles>
+					<goals>deploy</goals>
 				</configuration>
-			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-site-plugin</artifactId>
-				<version>3.4</version>
 			</plugin>
 		</plugins>
 	</build>
-
-	<!-- <distributionManagement> <snapshotRepository> <id>sonatype-nexus-snapshots</id> 
-		<name>Sonatype Nexus snapshot repository</name> <url>https://oss.sonatype.org/content/repositories/snapshots</url> 
-		</snapshotRepository> <repository> <id>sonatype-nexus-staging</id> <name>Sonatype 
-		Nexus release repository</name> <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url> 
-		</repository> </distributionManagement> -->
 
 	<distributionManagement>
 		<snapshotRepository>
