--- a/axu4j-sample/pom.xml
+++ b/axu4j-sample/pom.xml
@@ -36,7 +36,12 @@
 		<dependency>
 			<groupId>com.axisj</groupId>
 			<artifactId>axu4j</artifactId>
-			<version>0.2.0-SNAPSHOT</version>
+			<version>0.2.0-RELEASE</version>
+		</dependency>
+		<dependency>
+			<groupId>org.freemarker</groupId>
+			<artifactId>freemarker</artifactId>
+			<version>2.3.21</version>
 		</dependency>
 	</dependencies>
 	<build>
