--- a/axu4j-egovframe/pom.xml
+++ b/axu4j-egovframe/pom.xml
@@ -210,6 +210,12 @@
 			<artifactId>icu4j</artifactId>
 			<version>53.1</version>
 		</dependency>
+
+        <dependency>
+            <groupId>com.axisj</groupId>
+            <artifactId>axu4j</artifactId>
+            <version>0.4.0-SNAPSHOT</version>
+        </dependency>
 	</dependencies>
 
     <build>
