--- a/axu4j-egovframe/pom.xml
+++ b/axu4j-egovframe/pom.xml
@@ -214,7 +214,7 @@
         <dependency>
             <groupId>com.axisj</groupId>
             <artifactId>axu4j</artifactId>
-            <version>0.4.0-SNAPSHOT</version>
+            <version>0.4.0-RELEASE</version>
         </dependency>
 	</dependencies>
 
