프로젝트별 설명 추가

--- a/axu4j-sample/pom.xml
+++ b/axu4j-sample/pom.xml
@@ -11,7 +11,7 @@
 		<developer>
 			<id>hyunjun19</id>
 			<name>HJ.Park</name>
-			<email>hyunjun19@gmail.com</email>
+			<email>hyunjun@axisj.com</email>
 		</developer>
 	</developers>
 	<dependencies>
