--- a/axu4j-sample/pom.xml
+++ b/axu4j-sample/pom.xml
@@ -36,7 +36,7 @@
 		<dependency>
 			<groupId>com.axisj</groupId>
 			<artifactId>axu4j</artifactId>
-			<version>0.4.2-SNAPSHOT</version>
+			<version>0.4.2-RELEASE</version>
 		</dependency>
 		<dependency>
 			<groupId>org.freemarker</groupId>
