--- a/axu4j-tag/pom.xml
+++ b/axu4j-tag/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.axisj</groupId>
 	<artifactId>axu4j</artifactId>
-	<version>0.4.3-RELEASE</version>
+	<version>1.0.0-SNAPSHOT</version>
 	<name>axu4j Taglib</name>
 	<description>AXU for Java</description>
 	<url>https://github.com/axisj-com/axu4j</url>
@@ -39,7 +39,7 @@
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
-			<version>3.8.1</version>
+			<version>4.10</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
