--- a/axu4j-egovframe/pom.xml
+++ b/axu4j-egovframe/pom.xml
@@ -220,7 +220,7 @@
         <dependency>
             <groupId>com.axisj</groupId>
             <artifactId>axu4j</artifactId>
-            <version>1.2.0-SNAPSHOT</version>
+            <version>1.2.0-RELEASE</version>
         </dependency>
 	</dependencies>
 
